--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
     
-    <a href="#" >SUDO</a>
+    <a href="heart.html" >SUDO</a>
 </head>
 <body>
     
