--- a/index.html
+++ b/index.html
@@ -515,10 +515,10 @@
                </h3>
                 <div class="row">
                     <h3 class="ml-5">Strengths</h3>
-                    <div class="col-lg-9 offset-lg-2" data-aos="zoom-in">
+                    <div class="col-lg-9 offset-lg-2" >
                         <p class="mov mov9"> <b> </b> <span class="spns"></span></p>
                     </div>
-                        <div class="col-lg-12 offset-2"  data-aos="zoom-in" >
+                        <div class="col-lg-12 offset-2"  >
                         <div class="spn1">
                             •	Can mingle with team
                             •	Fast learner
@@ -529,10 +529,10 @@
                 </div>
                     <div class="row">
                         <h3 class="ml-5">Weakness</h3>
-                    <div class="col-lg-9 offset-lg-2" data-aos="zoom-in">
+                    <div class="col-lg-9 offset-lg-2" >
                         <p class="mov mov9"> <b> </b> <span class="spnw"></span></p>
                     </div>
-                        <div class="col-lg-12 offset-2"  data-aos="zoom-in" >
+                        <div class="col-lg-12 offset-2"  >
                         <div class="spn1">
                             •	 Too much focus on details
                             •	Going too much deep into the work
